@@ -64,6 +64,12 @@ tasks {
   }
 }
 
+tasks.withType<Test>().configureEach {
+  // required on jdk17
+  jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+  jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
+}
+
 if (findProperty("testLatestDeps") as Boolean) {
   configurations {
     // finatra artifact name is different for regular and latest tests
